--- a/src/App.scss
+++ b/src/App.scss
@@ -20,18 +20,30 @@
   --bg-custom-gradient: linear-gradient(109deg, rgb(182, 244, 146) 11.2%, rgb(51, 139, 147) 92.5%);
 }
 
-body {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
   font-family: 'Poppins', sans-serif;
+  font-size: 14px;
+  
+  
 }
 
 main {
-  height: calc(100vh - 80px);
-  overflow: hidden;
+  height: auto;
+  @media (min-width: 720px) {
+    height: calc(100vh - 70px);
+  }
 }
 
 h2 {
   color: var(--gradient-blue);
   font-size: 3rem;
+  margin-bottom: 0.75rem;
   line-height: 4rem;
   font-weight: bold;
   text-shadow: 1px 0px 11px var(--gradient-green);
