--- a/src/App.scss
+++ b/src/App.scss
@@ -64,3 +64,18 @@ h3 {
     line-height: 3vw;
   }
 }
+
+input, select {
+  font-size: 16px;
+  font-size: max(16px, 1em);
+  font-family: inherit;
+  padding: 0.25em 0.5em;
+  background-color: #fff;
+  box-shadow: 0 0 10px lightgray;
+  border: 2px solid var(--input-border);
+  border-radius: 4px;
+
+  &:hover, &:active, &:focus {
+    outline: 0;
+  }
+}
