--- a/src/App.scss
+++ b/src/App.scss
@@ -67,15 +67,18 @@ h3 {
 
 input, select {
   font-size: 16px;
-  font-size: max(16px, 1em);
-  font-family: inherit;
-  padding: 0.25em 0.5em;
   background-color: #fff;
   box-shadow: 0 0 10px lightgray;
-  border: 2px solid var(--input-border);
   border-radius: 4px;
 
   &:hover, &:active, &:focus {
     outline: 0;
   }
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: url("http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png") white no-repeat 95.5% !important;
 }
