--- a/src/components/ItemList/ItemList.scss
+++ b/src/components/ItemList/ItemList.scss
@@ -57,3 +57,16 @@
     }
   }
 }
+
+.card-link {
+  img {
+    transform: scale(1);
+    transition: transform 700ms;
+  }
+  &:hover {
+    img {
+      transform: scale(1.2);
+      transition: transform 700ms;
+    }
+  }
+}
