--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,11 @@ h2 {
   font-weight: bold;
   text-shadow: 1px 0px 11px var(--gradient-green);
   -webkit-text-stroke: 1px black;
+  white-space: pre-wrap;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
 }
 
 h3 {
@@ -63,6 +68,13 @@ h3 {
     font-size: 3.2vw;
     line-height: 3vw;
   }
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 0;
+  color: rgba(0,0,0,0.3);;
 }
 
 input, select {
