--- a/src/components/DetailContent/DetailContent.scss
+++ b/src/components/DetailContent/DetailContent.scss
@@ -23,6 +23,7 @@
       align-items: flex-start;
       width: fit-content;
       min-height: 50%;
+      border-right: 2px solid rgba(229, 231, 235);
       
       li {
         flex-direction: column;
@@ -35,6 +36,7 @@
     flex-direction: row;
     padding-left: 620px;
     padding-right: 20px;
+    min-height: 50%;
   }
 }
 
