Fix some bugs and add tests for API

--- a/src/components/DetailContent/DetailContent.scss
+++ b/src/components/DetailContent/DetailContent.scss
@@ -24,6 +24,7 @@
       width: fit-content;
       min-height: 50%;
       border-right: 2px solid rgba(229, 231, 235);
+      padding-right: 25px;
       
       li {
         flex-direction: column;
